--- a/Membuat Web/index.html
+++ b/Membuat Web/index.html
@@ -25,23 +25,23 @@
     <div class="extra1">
         <h2 class="section-title">OUR TEAM</h2>
         <div class="member">
-          <img src="D:\KULIAH\[Progate]\Membuat Web\Image\5c92035339051-BmsgYqxABG3-png__700.jpg" alt="" width="200px" height="300px">
+          <img src="Image\5c92035339051-BmsgYqxABG3-png__700.jpg" width="200px" height="300px">
           <p>Dadang Abdul Rohman</p>
         </div>
         <div class="member">
-          <img src="D:\KULIAH\[Progate]\Membuat Web\Image\2517345.jpg" alt="" width="200px" height="300px">
+          <img src="Image\2517345.jpg" width="200px" height="300px">
           <p>Danang Hafid Nurjayanto</p>
         </div>
         <div class="member">
-          <img src="D:\KULIAH\[Progate]\Membuat Web\Image\1464676806_82e8099feb_b.jpg" alt="" width="200px" height="300px">
+          <img src="Image\1464676806_82e8099feb_b.jpg" width="200px" height="300px">
           <p>Dewa Putu Suasmana</p>
         </div>
         <div class="member">
-          <img src="D:\KULIAH\[Progate]\Membuat Web\Image\cropped-gambar-British-Shorthair.jpg" alt="" width="200px" height="300px">
+          <img src="Image\cropped-gambar-British-Shorthair.jpg" width="200px" height="300px">
           <p>Dyah Putri Tsaniyah</p>
         </div>
         <div class="member">
-          <img src="D:\KULIAH\[Progate]\Membuat Web\Image\maine-coon-cat.jpg" alt="" width="200px" height="300px">
+          <img src="Image\maine-coon-cat.jpg" width="200px" height="300px">
           <p>Emilio Fajriyan  </p>
         </div>
 
@@ -50,8 +50,11 @@
     <div class="extra2">
       <h1 class="section-title">Contact Us</h1>
       <input type="text" id="name" name="name" placeholder="Name">
+      <p></p>
       <input type="text" id="email" name="email" placeholder="Email">
+      <p></p>
       <textarea>Your Message</textarea>
+      <p></p>
       <input type="submit" value="SUBMIT">
 
     </div>
